@@ -70,7 +70,12 @@ module Sequel
     #   DB[:table].filter(:a).and(:b) # SELECT * FROM table WHERE a AND b
     def and(*cond, &block)
       raise(InvalidOperation, "No existing filter found.") unless @opts[:having] || @opts[:where]
-      filter(*cond, &block)
+      if @opts[:having]
+        Sequel::Deprecation.deprecate('Dataset#and will no longer modify the HAVING clause starting in Sequel 4.  Switch to using Dataset#having.')
+        having(*cond, &block)
+      else
+        where(*cond, &block)
+      end
     end
     
     # Returns a new clone of the dataset with with the given options merged.
@@ -131,6 +136,7 @@ module Sequel
     #   DB[:items].exclude(:category => 'software', :id=>3)
     #   # SELECT * FROM items WHERE ((category != 'software') OR (id != 3))
     def exclude(*cond, &block)
+      Sequel::Deprecation.deprecate('Dataset#exclude will no longer modify the HAVING clause starting in Sequel 4.  Switch to using Dataset#exclude_having.') if @opts[:having]
       _filter_or_exclude(true, @opts[:having] ? :having : :where, *cond, &block)
     end
 
@@ -214,6 +220,7 @@ module Sequel
     #
     # See the the {"Dataset Filtering" guide}[link:files/doc/dataset_filtering_rdoc.html] for more examples and details.
     def filter(*cond, &block)
+      Sequel::Deprecation.deprecate('Dataset#filter will no longer modify the HAVING clause starting in Sequel 4.  Switch to using Dataset#having.') if @opts[:having]
       _filter(@opts[:having] ? :having : :where, *cond, &block)
     end
     
@@ -633,6 +640,7 @@ module Sequel
     def or(*cond, &block)
       clause = (@opts[:having] ? :having : :where)
       raise(InvalidOperation, "No existing filter found.") unless @opts[clause]
+      Sequel::Deprecation.deprecate('Dataset#or will no longer modify the HAVING clause starting in Sequel 4.  There is currently no replacement for this behavior, but one can be added if requested.') if clause == :having
       cond = cond.first if cond.size == 1
       clone(clause => SQL::BooleanExpression.new(:OR, @opts[clause], filter_expr(cond, &block)))
     end
