@@ -1,10 +1,14 @@
 === HEAD
 
+* Deprecate Dataset#{and,filter,exclude,or} affecting the HAVING clause (jeremyevans)
+
 * Deprecate passing explicit columns to update as separate arguments to Model#save (jeremyevans)
 
 * Allow specifying explicit columns to update in Model#save via the :columns option (jeremyevans)
 
 * Add ability set the default for join_table's :qualify option via Dataset#default_join_table_qualification (jeremyevans)
+
+* Deprecated :root=>true meaning :root=>:both in the json_serializer (jeremyevans)
 
 * Deprecate core extension usage if the core_extensions have not been explicitly loaded (jeremyevans)
 
